:bug: align images and mispell color

--- a/public/styles/configuration.css
+++ b/public/styles/configuration.css
@@ -18,7 +18,7 @@
 .color-content {
     display: flex;
     gap: 16px;
-    width: 340px;
+    width: 360px;
     height: 32px;
     margin-bottom: 64px;
 }
